--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,38 @@
 /* You can add global styles to this file, and also import other style files */
+@import "~bootstrap/dist/css/bootstrap.css";
+
+body {
+  font-size: 14px;
+  font-family: 'Plus Jakarta Sans';
+  transition: all 1.5s ease-in-out;
+  background-color: #F5F5F5;
+}
+
+.main-wrapper {
+  padding-left: 250px;
+  background-color: #F5F5F5;
+  width: 100%;
+  height: 100vh;
+}
+
+body.isCollapsed .main-wrapper {
+  padding-left: 4rem;
+}
+
+@media(max-width: 751px) {
+  .main-wrapper {
+    padding-left: 0rem;
+  }
+
+  .header {
+    width: calc(100% - 0rem);
+  }
+
+  .header_inner {
+    padding: 0.7rem;
+  }
+}
+
+select.form-control {
+  -webkit-appearance: menulist;
+}
